# Coda

./: .gitignore  CMakeLists.txt  README.md  build_cpp.sh  sentiment_fine_tuning_huggingface.ipynb
Coda/: CMakeLists.txt  CodeToCyrillic.py  CyrillicToCode.py  CyrillicToCode_all.sh  README.md  build.bat  build.sh  build_cpp.sh  install_python.sh  requirements.sh
Coda/config/Dictionary/Data/: StressPos.txt
Coda/config/Disambiguator/Config_Linux/EN/: Possible_labels.txt
Coda/config/Disambiguator/Config_Linux/EN_FAST/: model.txt
Coda/config/Disambiguator/Config_Linux/RU/: Abbreviatures.txt  Possible_labels.txt
Coda/config/SentenceSplitter/RU/: sent_split_model
Coda/config/StatCalc/: preprocessing_rules.txt  preprocessing_rules_eng.txt
Coda/config/Stresser/Config_Windows/: Tokens_NonAmbiguatedByMorphology.txt
Coda/config/SyntaxParser/Config_Linux/RU/: EdgeCalculatorConfig.txt  EdgeStatistics.txt  FrequentTokens.txt  UnbelievableFeatures.txt
Coda/config/Tokenizer/Config_Linux/RU/: multiplePartTokens.txt
Coda/config/Tokenizer/Config_Windows/RU/: dashTokens.txt
Coda/python/: tokenizer.py  usage_example.py
Coda/python/coda/: common.py  disambiguator.py  tokenizer.py  usage_example.py
Coda/src/: CMakeLists.txt  common_includes.cmake
Coda/src/algorithms/CRF/: CMakeLists.txt  main.cpp
Coda/src/algorithms/CRF/Chain/: Chain.cpp
Coda/src/algorithms/CRF/ChainTransformer/: DefaultChainTransformer.h  DoublingChainTransformer.cpp  DoublingChainTransformer.h  IChainTransformer.h
Coda/src/algorithms/CRF/IO/: CRFBinaryWriter.cpp  CRFBinaryWriter.h  CRFTextReader.h
Coda/src/algorithms/CRF/Inference/: CRFApplier.h
Coda/src/algorithms/CRF/Learner/: ChainCollectionReLearner.h
Coda/src/algorithms/CRF/Model/: CRF.h  Factors.cpp  Factors.h  State.cpp
Coda/src/algorithms/CRF/PossibleStateFinder/: DefaultPossibleStateFinder.cpp  EmptyPossibleStateFinder.h  IPossibleStateFinder.h
Coda/src/algorithms/CRF/Regularization/: IRegularization.h  L2Regularization.h  RelearnRegularization.cpp  RelearnRegularization.h
Coda/src/algorithms/CRF/Settings/: CRFSettingsHolder.cpp  CRFSettingsHolder.h
Coda/src/algorithms/CRF/Tester/: ChainCollectionTester.cpp  UnitLabelChainCollectionTester.h
Coda/src/algorithms/CRF/ViterbiNode/: ViterbiPathItem.h  ViterbiPercentageNode.h  ZViterbiNode.cpp  ZViterbiNode.h
Coda/src/algorithms/LogisticRegression/: CMakeLists.txt  features-filter.cpp  features-filter.h  features-reader.cpp  features-writer.cpp  sample.cpp  sample.h  softmax-regression-trainer.h  softmax-regression.h
Coda/src/algorithms/Optimization/: CMakeLists.txt  SimpleFunction.cpp  SimpleFunction.h
Coda/src/algorithms/Optimization/Optimizer/: IOptimizable.cpp  LBFGS.cpp  LBFGS.h
Coda/src/algorithms/Phoenix/CompileGrammar/: compile_grammar.cpp  pconf.h
Coda/src/algorithms/Phoenix/NLUPhoenix/: CMakeLists.txt  DbTables.cpp  FilledFrame.cpp  Frame.h  Grammar.cpp  Grammar.h  GrammarNet.cpp  Parse.h  Phoenix.h  PhoenixParser.cpp  PhoenixParser.h  PhoenixSlotGraph.cpp  WORKER.cpp  (+13 more)
Coda/src/algorithms/SVM/: CMakeLists.txt  libsvm-wrapper.h
Coda/src/nlp-stack/Chunking/: CMakeLists.txt  ChunkingProcessor.cpp  SyntaxChunker.cpp  SyntaxChunker.h  main.cpp
Coda/src/nlp-stack/Dictionary/: CMakeLists.txt  DictionaryNode.h  DictionaryNodeModel.cpp  DictionaryNodeModel.h  DictionaryTrie.h  DictionaryTrieAccentUpdate.cpp  DictionaryTrieAccentUpdate.h  DictionaryTrieBinaryFileReader.cpp  DictionaryTrieBinaryFileReader.h  DictionaryTrieModelElement.cpp  DictionaryTrieWordFormByFeatures.cpp  DictionaryTrieWordFormByFeatures.h  MorphologicalDictionary.cpp  NGramTrie.cpp  NGramTrie.h  NGramTrieBinaryFileCreator.cpp  NGramTrieBinaryFileCreator.h  NGramTrieBinaryFileReader.cpp  NGramTrieBinaryFileReader.h  NGramTrieBuild.h  SuffixModelNode.h  SuffixModelTrieBuild.h  TestNGram.h  TestTools.h
Coda/src/nlp-stack/Disambiguator/: CMakeLists.txt  PythonExtension.cpp  main.cpp
Coda/src/nlp-stack/Lemmatizer/: CMakeLists.txt  lemmatizer-interface.h  lemmatizer.h
Coda/src/nlp-stack/PorterStemmer/: CMakeLists.txt  stemmer.cpp  stemmer.h
Coda/src/nlp-stack/SentenceSplitter/: CMakeLists.txt  create-corpus-from-1st-sent.cpp  createDataSets.cpp  main.cpp
Coda/src/nlp-stack/Stresser/: CMakeLists.txt
Coda/src/nlp-stack/SyntaxParser/: CMakeLists.txt  main.cpp
Coda/src/nlp-stack/Tokenizer/: CMakeLists.txt  PythonExtension.cpp  PythonExtension.h  python_extension.cpp
Coda/src/utils/Eigen/: CMakeLists.txt  eigen-tools.cpp  eigen-tools.h  eigen.h  main.cpp
Coda/src/utils/FileManager/: BinaryWriter.hpp  CMakeLists.txt  FileReader.cpp  FileReader.h  FileWriter.h  ReadConverter.h
Coda/src/utils/RegexpTools/: CMakeLists.txt  RegExp.cpp  main.cpp
Coda/src/utils/StatCalc/: CMakeLists.txt  category-processor.h  lemmatizer-adapter.h  stat-calc-tools.h  statcalc-enums.cpp  statcalc-enums.h
Coda/src/utils/TagsetConstants/: CMakeLists.txt
Coda/src/utils/TagsetConverter/: CMakeLists.txt  RusCorporaToSyntagrusConverter.cpp  RusCorporaToSyntagrusConverter.h  SyntagrusToRusCorporaConverter.cpp
Coda/src/utils/Tools/: CMakeLists.txt  CrossPlatformHeader.h  Exceptions.cpp  Tools.h
Coda/test/: CMakeLists.txt  FastDetectorTest.h  test-disambiguator.cpp  test-formatted-io.cpp  test-inflector.cpp
Coda/test/google-test/: CMakeLists.txt
Coda/test/google-test/gtest/: gtest.h
src/c_api/: CMakeLists.txt  all.cpp  all.h
src/nlp-stack/Lemmatizer/: CMakeLists.txt  lemmatizer.cpp  main.cpp
src/nlp-stack/SyntaxParser/: CMakeLists.txt  PythonExtension.cpp  PythonExtension.h
src/utils/FileManager/: BinaryReader.hpp  CMakeLists.txt  FileStreamIdentifier.h  main.cpp
src/utils/TagsetConverter/: CMakeLists.txt  OpenCorporaToSynagrusConverter.cpp  OpenCorporaToSynagrusConverter.h  PythonExtension.cpp  PythonExtension.h  SyntagrusToRusCorporaConverter.h  TagsetConverterInterface.h  main.cpp
test/: CMakeLists.txt  VistrackerTest.h  test-dictionary.cpp  test-example.cpp  test-sentence-splitter.cpp  test-softmax-regression.cpp  test_dict_tokenizer.cpp  token_stream_test_file
test/google-test/: CMakeLists.txt
(+446 files in other folders)
